fix(menu): Only show menus with the 'show' class.
Fixes the permanent scrollbar caused by the global menu being displayed off screen.

--- a/scss/os/_overrides_jqueryui.scss
+++ b/scss/os/_overrides_jqueryui.scss
@@ -58,7 +58,6 @@
   // This part ignores the default jquery styles
   background: $dropdown-bg;
   border: $dropdown-border-width solid $dropdown-border-color;
-  display: block !important;
 
   // This gets the same styles defined for dropdown-menu. Used for when themes specify after the fact
   @extend .dropdown-menu;
